--- a/angular/src/assets/css/admin.css
+++ b/angular/src/assets/css/admin.css
@@ -1,11 +1,11 @@
 /* admin */
 .conteudo-admin {
   margin-top: 4vh;
-  
+
 }
 /* formatação de texto */
 .header {
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
   min-height: 8vh;
   width: 100%;
 }
@@ -66,17 +66,26 @@
 .btn, input.btn,
 .btn .btn-large,
  a .btn.btn-large.modal-trigger,
-.btn-floating.fab.waves-effect.waves-light,
-.btn.modal-trigger,
-.file-field input-field .btn,
-button .btn {
+ .btn-floating,
+ .btn-floating.fab.waves-effect.waves-light,
+ a .btn-floating .halfway-fab .waves-effect .waves-light,
+ .btn.modal-trigger,
+ .file-field input-field .btn,
+ button .btn {
   background-color: #607d8b;
 }
+ .btn-floating {
+   background-color: #607d8b !important;
+ }
+ .btn-floating:hover {
+   background-color: #90a4ae !important;
+ }
 /* hover - botao padrão */
 .btn:hover, input.btn:hover,
 .btn.btn-large:hover,
 .btn-floating.fab.waves-effect.waves-light:hover,
 .btn.modal-trigger:hover,
+.btn-floating,
 .file-field input-field .btn:hover,
 button .btn:hover{
   background-color: #90a4ae;
@@ -103,6 +112,16 @@ button .btn:hover{
 .dropdown-content li>a,
 .dropdown-content li>span {
   color: #37474f;
+}
+
+/* radio */
+[type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:after {
+    background-color: #37474f  !important;
+    border: 2px solid #37474f  !important;
+    font-size: 2.4em;
+}
+[type="radio"]:not(:checked) + label:before, [type="radio"]:not(:checked) + label:after, [type="radio"]:checked + label:before, [type="radio"]:checked + label:after, [type="radio"].with-gap:checked + label:before, [type="radio"].with-gap:checked + label:after {
+    border-radius: 50%;
 }
 
 /* procurar classe certa .................. */
